# Sekkeizu

./: CMakeLists.txt
dep/: CMakeLists.txt  cryptopp-win32-clang.patch  cryptopp.cmake  mongoc-win32-clang.patch
src/: CMakeLists.txt  main.cpp
src/core/: coreloop.hpp  coreloop_network_plugin.hpp  coreloop_palanteer_tick_time.hpp  coreloop_scheduled_tick.hpp  coreloop_user_tick_plugin.hpp  coreloop_with_network_handler.hpp  database.hpp  fixed_string.hpp
src/database/: bson_reflection_struct.hpp  database.hpp  transaction.hpp
src/memory/: per_thread_pool.hpp
src/transaction/: transaction.hpp
